package Enums;

public enum Color {
    White,
    Black
}
