package Enums;

public enum PieceType {
    KING, QUEEN, BISHOP, KNIGHT, ROOK, PAWN, ARCHBISHOP, CHANCELLOR
}
